# socket-io-rust

./: Cargo.toml
.github/: CODEOWNERS
.github/workflows/: 3-artifacts.yml
src/: lib.rs
src/data/: mod.rs
src/data/errors/: mod.rs
src/engine_io_parser/: engine_io_parser_impl.rs  errors.rs  mod.rs  packet.rs
src/engine_io_server/: mod.rs  socket.rs  transport.rs  websocket.rs
src/parser/: mod.rs  parser_impl.rs
src/random_id_generator/: mod.rs
src/socket_io/: mod.rs  socket_io.rs  socket_io_server.rs
src/socket_io_adaptor/: chat_room_manager.rs  io_adaptor.rs  mod.rs  namespace.rs  namespace_manager.rs  socket_id_manager.rs  socket_io_adaptor_impl.rs
src/socket_io_packet_codec/: default_packet_codec.rs  mod.rs  number_util.rs  packet_type.rs  socket_io_packet.rs
src/socket_io_parser/: mod.rs  number_util.rs  socket_io_packet.rs  socket_io_packet_type.rs  socket_io_parser_impl.rs
src/socket_io_websocket/: app_state.rs  mod.rs  socket_io_websocket_impl.rs  socket_message.rs
