[package]
name = "socket-io-rust"
version = "0.1.0"
authors = ["Chenxi Yuan <yuanchenxi95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
thiserror = "1.0"
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-rt = "1.0.0"
